fix: align update password spinner

--- a/frontend/src/components/user/updatepassword.css
+++ b/frontend/src/components/user/updatepassword.css
@@ -51,4 +51,7 @@
     background-color: #3350f4;
     border-radius: 12px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
